fix gap issue between carousel and left side of screen when window shrinks horizontally by reducing width of the body by 10pxs

--- a/Instagram-HTML-CSS-Practice/Feed-page/style/general.css
+++ b/Instagram-HTML-CSS-Practice/Feed-page/style/general.css
@@ -12,15 +12,15 @@ p {
   font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-/* prevents the carousel content from moving off the left side of the window */
+/* prevents the carousel content from moving off the left side of the window. I needed to update this with 10pxs less than originally to get the content to reach the left side of the screen without a large gap */
 @media (max-width: 714px) {
   body {
-    width: 714px;
+    width: 704px;
   }
 }
 
-@media (max-width: 834px) {
+@media (min-width: 715px) {
   body {
-    width: 834px;
+    /*width: 834px;*/
   }
 }
